--- a/EmberWpfCore/View/Main.xaml
+++ b/EmberWpfCore/View/Main.xaml
@@ -1,12 +1,21 @@
-﻿<Window x:Class="EmberWpfCore.View.Main"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EmberWpfCore"
+        xmlns:local1="clr-namespace:EmberWpfCore.View" x:Name="window" x:Class="EmberWpfCore.View.Main"
         mc:Ignorable="d"
         Title="Main" Height="450" Width="800">
     <Grid>
-        
+        <Label
+            Content="{Binding Path=DataContext.LatestBeatmapFile, ElementName=window, Mode=TwoWay}"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" Width="781" Background="#FF797979" Height="23" Margin="0,10,0,0"
+        />
+        <ListBox HorizontalAlignment="Left" Height="386" Margin="10,38,0,0" VerticalAlignment="Top" Width="246" x:Name="configurations"/>
+        <TextBox
+            Text="{Binding Path=DataContext.MyIntValue, ElementName=window, Mode=TwoWay, FallbackValue=Text}"
+            HorizontalAlignment="Left" Height="21" Margin="372,188,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="195"/>
     </Grid>
 </Window>
