--- a/EmberWpfCore/View/Tabs/PluginsTab.xaml
+++ b/EmberWpfCore/View/Tabs/PluginsTab.xaml
@@ -1,25 +1,43 @@
-﻿<UserControl x:Class="EmberWpfCore.View.Tabs.PluginsTab"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EmberWpfCore.View.Tabs"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             x:Name="plugins">
-  <d:UserControl.DataContext>
-    <local:PluginsTabViewModel />
-  </d:UserControl.DataContext>
+﻿<UserControl
+    x:Class="EmberWpfCore.View.Tabs.PluginsTab"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:EmberWpfCore.View.Tabs"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <d:UserControl.DataContext>
+        <local:PluginsTabViewModel />
+    </d:UserControl.DataContext>
     <Grid>
-        <ListBox HorizontalAlignment="Left"
-                 VerticalAlignment="Center" 
-                 Height="430" Margin="10,0,0,0" Width="252"
-                 ItemsSource="{Binding PluginsViewModel, Mode=OneWay}"
-                 x:Name="pluginList"
-                 />
-        <Label Content="Plugin:" HorizontalAlignment="Left" Height="22" Margin="267,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="{Binding ElementName=pluginList, Path=SelectedItem}" HorizontalAlignment="Left" Height="22" Margin="347,10,0,0" VerticalAlignment="Top" Width="184"/>
-        <Label Content="Status:" HorizontalAlignment="Left" Height="22" Margin="267,37,0,0" VerticalAlignment="Top" Width="75"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <ListBox
+            Grid.Column="0"
+            Width="200"
+            ItemsSource="{Binding PluginsViewModel, Mode=OneWay}"
+            SelectedItem="{Binding SelectedPlugin}" />
+        <StackPanel Grid.Column="1">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Plugin:" />
+                <Label Content="{Binding SelectedPlugin, Mode=OneWay}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Status:" />
+                <Label Content="{Binding SelectedPluginStatus, Mode=OneWay}" />
+            </StackPanel>
+            <Button
+                Command="{Binding PluginsViewModel.EnablePluginCommand}"
+                CommandParameter="{Binding SelectedPlugin, Mode=OneWay}"
+                Content="Enable" />
+            <Button
+                Command="{Binding PluginsViewModel.DisablePluginCommand}"
+                CommandParameter="{Binding SelectedPlugin, Mode=OneWay}"
+                Content="Disable" />
+        </StackPanel>
     </Grid>
 </UserControl>
