--- a/EmberWpfCore/View/Tabs/PluginsTab.xaml
+++ b/EmberWpfCore/View/Tabs/PluginsTab.xaml
@@ -8,9 +8,6 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <d:UserControl.DataContext>
-        <local:PluginsTabViewModel />
-    </d:UserControl.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -31,11 +28,11 @@
                 <Label Content="{Binding SelectedPluginStatus, Mode=OneWay}" />
             </StackPanel>
             <Button
-                Command="{Binding PluginsViewModel.EnablePluginCommand}"
+                Command="{Binding EnablePluginCommand}"
                 CommandParameter="{Binding SelectedPlugin, Mode=OneWay}"
                 Content="Enable" />
             <Button
-                Command="{Binding PluginsViewModel.DisablePluginCommand}"
+                Command="{Binding DisablePluginCommand}"
                 CommandParameter="{Binding SelectedPlugin, Mode=OneWay}"
                 Content="Disable" />
         </StackPanel>
