--- a/EmberWpfCore/ResourceDictionaries/Generic.xaml
+++ b/EmberWpfCore/ResourceDictionaries/Generic.xaml
@@ -1,12 +1,8 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:EmberWpfCore.Converters"
-    xmlns:local="clr-namespace:EmberWpfCore.Themes">
-    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:converters="clr-namespace:EmberWpfCore.Converters">
     <SolidColorBrush x:Key="ThemeBrush" Color="#4b367c" />
     <SolidColorBrush x:Key="ForeBrush" Color="#101010" />
-    <SolidColorBrush x:Key="ForeDescBrush" Color="#A0A0A0" />
+    <SolidColorBrush x:Key="ForeDescBrush" Color="#9f9f9f" />
 
     <SolidColorBrush x:Key="ButtonBrush" Color="#dddddd" />
     <SolidColorBrush x:Key="ButtonHoverBrush" Color="#e0e0e0" />
@@ -108,6 +104,7 @@
     </Style>
 
 
+    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
     <!--  Normal CheckBox Style  -->
     <Style x:Key="CommonCheckBox" TargetType="CheckBox">
         <Setter Property="Foreground" Value="{StaticResource ForeBrush}" />
