--- a/src/plugins/osu/BeatmapDownloader.WpfUI/UI/View/MultiplayerDownloaderTab.xaml
+++ b/src/plugins/osu/BeatmapDownloader.WpfUI/UI/View/MultiplayerDownloaderTab.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32px" />
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Width="Auto">
